--- a/templates/img/styles.css
+++ b/templates/img/styles.css
@@ -1,71 +1,69 @@
 body {
-  background-color: black;
-  color: white;
-  align-items: center;
-  font-family: Arial, sans-serif;
   margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
 }
 
 .top-frame {
+  background-color: black;
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  background-color: #333333;
-  height: 80px;
-  padding: 0 20px;
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 1;
+  padding: 10px;
 }
 
 .logo {
-  width: 100px;
-  height: 50px;
+  width: 150px;
+  height: 150px;
 }
 
-.menu-btn {
-  display: block;
-  width: 30px;
-  height: 20px;
-  border: none;
-  background-color: transparent;
-  background-image: url("menu-icon.png");
-  background-size: 100%;
-  background-repeat: no-repeat;
-  background-position: center;
-  cursor: pointer;
-}
-
-.nav-items {
-  display: none;
-  position: absolute;
-  top: 80px;
-  left: 0;
-  right: 0;
-  background-color: #333333;
-  z-index: 2;
-}
-
-.close-btn {
-  display: block;
-  position: absolute;
-  top: 0;
-  right: 20px;
+.menu-icon {
   font-size: 30px;
   color: white;
   background-color: transparent;
   border: none;
   cursor: pointer;
+  padding: 10px;
+  margin-left: 10px;
 }
 
-ul {
+.nav-menu {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background-color: black;
+  padding: 0;
+  margin: 0;
+}
+
+.nav-menu ul {
   list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.nav-menu li {
   margin: 0;
   padding: 0;
 }
 
-li {
-  margin: 10px 0
+.nav-menu li a {
+  display: block;
+  padding: 10px;
+  color: white;
+  text-decoration: none;
+}
+
+.main-frame {
+  display: flex;
+  flex-direction: row;
+  height: calc(100vh - 160px);
+  width: 100%;
+}
+
+iframe {
+  width: 100%;
+  height: 100%;
+  border: none;
+}
