--- a/templates/test.html
+++ b/templates/test.html
@@ -7,29 +7,22 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
   </head>
   <body>
-    <div class="top-frame">
-      <img src="{{ url_for('static', filename='logo.png') }}" alt="Nostr Logo" class="logo">
-      <button class="menu-icon" onclick="toggleMenu()">&#9776;</button>
-      <nav class="nav-menu" id="nav-menu">
-        <ul>
-          <li><a href="{{ url_for('home') }}">HOME</a></li>
-          <li><a href="{{ url_for('info') }}">INFO</a></li>
-          <li><a href="{{ url_for('register') }}">REGISTER</a></li>
-        </ul>
-      </nav>
+    <div class="menu-container">
+      <div class="logo-container">
+        <img src="{{ url_for('static', filename='logo.png') }}" alt="Nostr Logo" class="logo">
+      </div>
+      <div class="burger-container">
+        <input type="checkbox" class="burger-input" id="burger-input">
+        <label for="burger-input" class="burger-label"><span class="burger-icon"></span></label>
+        <div class="burger-items-container">
+          <a href="{{ url_for('home') }}" target="bottom-frame" class="burger-item">HOME</a>
+          <a href="{{ url_for('info') }}" target="bottom-frame" class="burger-item">INFO</a>
+          <a href="{{ url_for('register') }}" target="bottom-frame" class="burger-item">REGISTER</a>
+        </div>
+      </div>
     </div>
-    <div class="main-frame">
+    <div class="iframe-container">
       <iframe name="bottom-frame" frameborder="0" src="{{ url_for('home') }}"></iframe>
     </div>
-    <script>
-      function toggleMenu() {
-        var menu = document.getElementById("nav-menu");
-        if (menu.style.display === "block") {
-          menu.style.display = "none";
-        } else {
-          menu.style.display = "block";
-        }
-      }
-    </script>
   </body>
 </html>
