--- a/templates/img/styles.css
+++ b/templates/img/styles.css
@@ -4,66 +4,74 @@ body {
   font-family: Arial, sans-serif;
 }
 
-.top-frame {
-  background-color: black;
+.menu-container {
   display: flex;
-  justify-content: space-between;
   align-items: center;
+  justify-content: space-between;
+  background-color: black;
+  color: white;
   padding: 10px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1;
 }
 
 .logo {
-  width: 150px;
-  height: 150px;
+  height: 50px;
 }
 
-.menu-icon {
-  font-size: 30px;
-  color: white;
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
-  padding: 10px;
-  margin-left: 10px;
+.burger-container {
+  display: flex;
+  align-items: center;
 }
 
-.nav-menu {
+.burger-input {
   display: none;
+}
+
+.burger-label {
+  display: block;
+  cursor: pointer;
+  padding: 5px;
+}
+
+.burger-icon {
+  display: block;
+  width: 20px;
+  height: 2px;
+  background-color: white;
+  margin: 3px 0;
+}
+
+.burger-items-container {
   position: absolute;
   top: 100%;
   left: 0;
+  width: 100%;
   background-color: black;
-  padding: 0;
-  margin: 0;
-}
-
-.nav-menu ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.nav-menu li {
-  margin: 0;
-  padding: 0;
-}
-
-.nav-menu li a {
-  display: block;
+  display: flex;
+  flex-direction: column;
   padding: 10px;
+  box-sizing: border-box;
+  transform: scaleY(0);
+  transform-origin: top;
+  transition: transform 0.3s ease;
+  z-index: 2;
+}
+
+.burger-input:checked ~ .burger-items-container {
+  transform: scaleY(1);
+}
+
+.burger-item {
   color: white;
   text-decoration: none;
+  padding: 5px 0;
+  border-bottom: 1px solid white;
 }
 
-.main-frame {
-  display: flex;
-  flex-direction: row;
-  height: calc(100vh - 160px);
-  width: 100%;
-}
-
-iframe {
-  width: 100%;
-  height: 100%;
-  border: none;
-}
+.iframe-container {
+  margin-top: 70px;
+  height
