--- a/templates/img/styles.css
+++ b/templates/img/styles.css
@@ -1,83 +1,63 @@
-body {
-  background-color: black;
-  color: white;
-  font-family: Arial, sans-serif;
-  margin: 0;
-}
-
-.container {
+nav {
   display: flex;
-  flex-direction: column;
-  height: 100vh;
-}
-
-.header {
-  display: flex;
+  justify-content: space-between;
   align-items: center;
-  padding: 20px;
   background-color: #333;
+  color: white;
+  padding: 10px;
 }
 
 .logo {
-  width: 150px;
-  height: 150px;
+  font-size: 24px;
 }
 
-.menu-button {
-  margin-left: auto;
-  font-size: 20px;
-  background-color: transparent;
-  color: white;
-  border: none;
+.menu-icon {
+  font-size: 30px;
   cursor: pointer;
+  display: none;
 }
 
 .menu {
-  position: absolute;
-  top: 80px;
-  left: -300px;
-  width: 300px;
-  height: calc(100vh - 80px);
-  background-color: #333;
-  transition: transform 0.3s ease-in-out;
-}
-
-.close-button {
-  font-size: 20px;
-  background-color: transparent;
-  color: white;
-  border: none;
-  cursor: pointer;
-  position: absolute;
-  top: 10px;
-  right: 10px;
-}
-
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-
-li {
-  margin: 20px;
-}
-
-a {
-  text-decoration: none;
-  color: white;
-  font-size: 20px;
-}
-
-.main {
-  flex: 1;
   display: flex;
+  justify-content: flex-end;
   align-items: center;
-  justify-content: center;
-  width: 100%;
 }
 
-iframe {
-  width: 100%;
-  height: 100%;
+.menu li {
+  margin: 0 10px;
+}
+
+.menu li a {
+  color: white;
+  text-decoration: none;
+}
+
+@media (max-width: 768px) {
+  .menu {
+    display: none;
+  }
+  
+  .menu-icon {
+    display: block;
+  }
+  
+  .menu.active {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 50px;
+    background-color: #333;
+    width: 100%;
+    padding: 10px 0;
+  }
+  
+  .menu.active li {
+    margin: 10px 0;
+  }
+  
+  .menu.active li a {
+    color: white;
+    text-decoration: none;
+    font-size: 18px;
+  }
 }
