--- a/templates/img/styles.css
+++ b/templates/img/styles.css
@@ -1,63 +1,69 @@
-nav {
+body {
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
+}
+
+.top-frame {
+  background-color: black;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #333;
-  color: white;
   padding: 10px;
 }
 
 .logo {
-  font-size: 24px;
+  width: 150px;
+  height: 150px;
 }
 
 .menu-icon {
   font-size: 30px;
+  color: white;
+  background-color: transparent;
+  border: none;
   cursor: pointer;
+  padding: 10px;
+  margin-left: 10px;
+}
+
+.nav-menu {
   display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background-color: black;
+  padding: 0;
+  margin: 0;
 }
 
-.menu {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
+.nav-menu ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
-.menu li {
-  margin: 0 10px;
+.nav-menu li {
+  margin: 0;
+  padding: 0;
 }
 
-.menu li a {
+.nav-menu li a {
+  display: block;
+  padding: 10px;
   color: white;
   text-decoration: none;
 }
 
-@media (max-width: 768px) {
-  .menu {
-    display: none;
-  }
-  
-  .menu-icon {
-    display: block;
-  }
-  
-  .menu.active {
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    top: 50px;
-    background-color: #333;
-    width: 100%;
-    padding: 10px 0;
-  }
-  
-  .menu.active li {
-    margin: 10px 0;
-  }
-  
-  .menu.active li a {
-    color: white;
-    text-decoration: none;
-    font-size: 18px;
-  }
+.main-frame {
+  display: flex;
+  flex-direction: row;
+  height: calc(100vh - 160px);
+  width: 100%;
+}
+
+iframe {
+  width: 100%;
+  height: 100%;
+  border: none;
 }
