--- a/templates/img/styles.css
+++ b/templates/img/styles.css
@@ -62,6 +62,20 @@ body {
   width: 100%;
 }
 
+.left {
+  display: flex;
+  flex-direction: row;
+  height: calc(100vh - 160px);
+  width: 100%;
+}
+
+.right {
+  display: flex;
+  flex-direction: row;
+  height: calc(100vh - 160px);
+  width: 100%;
+}
+
 iframe {
   width: 100%;
   height: 100%;
